<resources>
    <string name="app_name">Rewards</string>
    <string name="tap_here_to_create_a_profile">Tap here to create a profile</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="tap_to_clear_saved_api_key">Tap to clear saved API Key</string>
    <string name="remember_my_credentials">Remember my credentials</string>
    <string name="username">Username</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="tell_us_something_about_yourself">Tell us something about yourself!</string>
    <string name="position_title">Position Title</string>
    <string name="department_name">Department Name</string>
    <string name="your_story_0_of_360">Your Story:</string>
    <string name="lorem_ipsum">Nam quis nulla. Integer malesuada. In in enim a arcu imperdiet malesuada. Sed vel lectus. Donec odio urna, tempus molestie, porttitor ut, iaculis quis, sem. Phasellus rhoncus. Aenean id metus id velit ullamcorper pulvinar. Vestibulum fermentum tortor id mi. Pellentesque ipsum. Nulla non arcu lacinia neque faucibus fringilla. Nulla non lectus sed ni</string>
    <string name="save">Save</string>
    <string name="send">Send</string>
    <string name="vityk_dimitri">Vityk, Dimitri</string>
    <string name="points_awarded">Points Awarded:</string>
    <string name="_800">800</string>
    <string name="computer_science">Computer Science</string>
    <string name="director">Director</string>
    <string name="position">Position:</string>
    <string name="department">Department:</string>
    <string name="your_story">Your Story:</string>
    <string name="reward_points_to_send">Reward points to send:</string>
    <string name="comment">Comment:</string>
    <string name="add_comment_for_dimitri">Add comment for Dimitri</string>
    <string name="student_email_edu">Student Email (.edu)</string>
    <string name="student_id_number">Student Id Number</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="save_profile">Save Profile</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>
    <string name="dimitri_vityk">Dimitri, Vityk</string>
    <string name="director_computer_science">Director, Computer Science</string>
    <string name="_1250">1250</string>
    <string name="vityk_dimitri1">Vityk, Dimitri</string>
    <string name="director1">Director</string>
    <string name="position1">Position:</string>
    <string name="computer_science1">Computer Science</string>
    <string name="department1">Department:</string>
    <string name="_659">659</string>
    <string name="points_awarded1">Points Awarded:</string>
    <string name="points_to_award">Points to Award:</string>
    <string name="chicago_il">Chicago, IL</string>
    <string name="_275">275</string>
    <string name="your_story1">Your Story:</string>
    <string name="dvityk">(Dvityk)</string>
    <string name="reward_history">Reward History:</string>
    <string name="dvityk1">dvityk</string>
    <string name="director2">Director</string>
    <string name="your_story_350_of_360">Your Story: (350 of 360)</string>
    <string name="vityk">Vityk</string>
    <string name="computer_science2">Computer Science</string>
    <string name="dimitri">Dimitri</string>
</resources>