<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <ImageView
        android:id="@+id/editImage"
        android:layout_width="148dp"
        android:layout_height="211dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:onClick="createImageOnClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/default_photo" />

    <TextView
        android:id="@+id/editUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#DDDCDC"
        android:padding="10dp"
        android:text="@string/dvityk1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editImage"
        app:layout_constraintTop_toTopOf="@+id/editImage" />

    <EditText
        android:id="@+id/editFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#DDDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text="@string/dimitri"
        app:layout_constraintEnd_toEndOf="@+id/editPassword"
        app:layout_constraintStart_toStartOf="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <EditText
        android:id="@+id/editLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#DDDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text="@string/vityk"
        app:layout_constraintEnd_toEndOf="@+id/editFirstName"
        app:layout_constraintStart_toStartOf="@+id/editFirstName"
        app:layout_constraintTop_toBottomOf="@+id/editFirstName" />

    <EditText
        android:id="@+id/editDepartment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#DDDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text="@string/computer_science"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editImage" />

    <EditText
        android:id="@+id/editPosition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#DDDCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:text="@string/director"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDepartment" />

    <TextView
        android:id="@+id/editTextSizeDisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/your_story_350_of_360"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPosition" />

    <EditText
        android:id="@+id/editStory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#DDDCDC"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/lorem_ipsum"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSizeDisplay" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.96" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#DDDCDC"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/editUsername"
        app:layout_constraintStart_toStartOf="@+id/editUsername"
        app:layout_constraintTop_toBottomOf="@+id/editUsername" />
</androidx.constraintlayout.widget.ConstraintLayout>