<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/dialogFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#DDDCDC"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dialogLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#DDDCDC"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/dialogFirstName"
        app:layout_constraintStart_toStartOf="@+id/dialogFirstName"
        app:layout_constraintTop_toBottomOf="@+id/dialogFirstName" />

    <EditText
        android:id="@+id/dialogEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#DDDCDC"
        android:ems="10"
        android:hint="@string/student_email_edu"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/dialogLastName"
        app:layout_constraintStart_toStartOf="@+id/dialogLastName"
        app:layout_constraintTop_toBottomOf="@+id/dialogLastName" />

    <EditText
        android:id="@+id/dialogStudentIDNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#DDDCDC"
        android:ems="10"
        android:hint="@string/student_id_number"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/dialogEmail"
        app:layout_constraintTop_toBottomOf="@+id/dialogEmail" />
</androidx.constraintlayout.widget.ConstraintLayout>